2004-09-13  Johan Dahlin  <johan@gnome.org>

	reviewed by: <delete if not using a buddy>

	* flumotion/common/bundle.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http_gui.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* testsuite/tests/bundle.py:

2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/Makefile.am:
	* flumotion/common/Makefile.am:
	* flumotion/component/Makefile.am:
	* flumotion/config/Makefile.am:
	* flumotion/manager/Makefile.am:
	* flumotion/twisted/Makefile.am:
	* flumotion/utils/Makefile.am:
	* flumotion/worker/Makefile.am:
	  adding ctags generation

2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	* flumotion/manager/component.py:
	  remove depreciation warnings

2004-09-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bttv/bttv.py:
	  import producer correctly

2004-09-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	  change componentmanager to c-heaven

2004-09-10  Johan Dahlin  <johan@gnome.org>

	* doc/reference/Makefile.am:
	* flumotion/common/launcher.py:
	* flumotion/manager/Makefile.am:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* flumotion/utils/log.py:
	* flumotion/worker/launcher.py:
	* flumotion/worker/worker.py:

	Merge in new manager code, add a worker heaven and clean up the
	relation between the different heavens. Best of all, we now have
	a Vishnu object.

2004-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/reference/Makefile.am:
	* flumotion/admin/admin.py:
	* flumotion/common/bundle.py:
	* flumotion/common/interfaces.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/manager.py:
	  various doc fixes

2004-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>
