@@ -1,7 +1,6 @@
 * MEDIUM	integration with monitoring tools:
 		big brother: either:
 
-* EASY		add test suite for logging and FLU_DEBUG variables
 * MEDIUM	figure out conflict between two config modules
 
 - make an executable script/program that makes all required checks and
